--- a/AC2L10.html
+++ b/AC2L10.html
@@ -132,7 +132,7 @@
 			<span class="fragment fade-in">
 			<p>And so in the $R\to\infty$ limit we have</p> 
 			\[
-			\color{red}{\boxed{\color{white}{
+			\color{#00FF00}{\boxed{\color{white}{
 			\int_{-\infty}^\infty f(x)\mathrm{d}x = 2\pi i \sum_j \mathrm{Res}(f; z_j)}}}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 			\]
 					
@@ -153,7 +153,7 @@
 		<p>With $f(x)=P(x)/Q(x)$ such that $Q$ is non-zero for all real $x$ and is of degree at least 2 greater
 		than the numerator $P$ using the following formula</p>
 		\[
-		\color{red}{\boxed{\color{white}{
+		\color{magenta}{\boxed{\color{white}{
 		 \int_{-\infty}^\infty f(x)\mathrm{d}x = 2\pi i \sum_j \mathrm{Res}(f; z_j)}}}
 		\]
 		
@@ -196,10 +196,10 @@
 		</span>
 		
 		<span class="fragment fade-in">
-		<p style="color:red">Note that the function $f$ has singularities $z_{1,2}=1\pm i$ both being second order poles and that only
+		<p style="color:#00FF00">Note that the function $f$ has singularities $z_{1,2}=1\pm i$ both being second order poles and that only
 		one of these lies in the upper half-plane</p>
 		
-		<img style="margin:0px;padding:0px;border: 3px solid red;position:absolute;top:50px;left:750px"				
+		<img style="margin:0px;padding:0px;border: 3px solid #00FF00;position:absolute;top:50px;left:750px"				
 				height="175"					
 				src="figures/Ex20p1.png">
 		</span>
@@ -216,14 +216,14 @@
 		 \mathrm{Res}(f;1+i) &=\lim_{z\to 1+i}\left\{\frac{\mathrm{d}}{\mathrm{d}z}\bigg[(z-(1+i))^2f(z)\bigg]\right\}\\
 		 &= \frac{\mathrm{d}}{\mathrm{d}z}\bigg[\frac{z}{(z-(1-i))^2}\bigg]_{z=1+i}\\
 		 &=\bigg[\frac{1}{(z-(1-i))^2}-\frac{2z}{(z-(1-i))^3}\bigg]_{z=1+i}
-		 &= \frac{1}{(2i)^2}-\frac{2(1+i)}{(2i)^3} = \color{red}{\boxed{\color{white}{\frac{1}{4i}}}}
+		 &= \frac{1}{(2i)^2}-\frac{2(1+i)}{(2i)^3} = \color{magenta}{\boxed{\color{white}{\frac{1}{4i}}}}
 		 \end{align*}
 		\]
 		
 		<span class="fragment fade-in">
 		<p>Thus</p>
 		\[
-		\int_{-\infty}^\infty \frac{x}{(x^2-2x+2)^2}\, \mathrm{d}z = 2\pi i\frac{1}{4i} = \color{red}{\boxed{\color{white}{\frac{\pi}{2}}}}
+		\int_{-\infty}^\infty \frac{x}{(x^2-2x+2)^2}\, \mathrm{d}z = 2\pi i\frac{1}{4i} = \color{#00FF00}{\boxed{\color{white}{\frac{\pi}{2}}}}
 		\]
 		<p>As required</p>
 		</span>
@@ -250,10 +250,10 @@
 		</span>
 		
 		<span class="fragment fade-in">
-		<p style="color:red">Note that the function $f$ has singularities $z_{n}=e^{(2n-1)\pi i/4}, n=1,\ldots 4$ all four being first order poles and that 
+		<p style="color:#00FF00">Note that the function $f$ has singularities $z_{n}=e^{(2n-1)\pi i/4}, n=1,\ldots 4$ all four being first order poles and that 
 		two of these lies in the upper half-plane</p>
 		
-		<img style="margin:0px;padding:0px;border: 3px solid red;position:absolute;top:50px;left:750px"				
+		<img style="margin:0px;padding:0px;border: 3px solid magenta;position:absolute;top:50px;left:750px"				
 				height="175"					
 				src="figures/Ex20p2.png">
 		</span>
@@ -279,7 +279,7 @@
 		\]
 		<p>Thus</p>
 		\[
-		\color{red}{\boxed{\color{white}{
+		\color{magenta}{\boxed{\color{white}{
 		\mathrm{Res}(f; z_1) = \left.\frac{1}{4z^3}\right|_{z=z_1} =\frac{1}{4}e^{-3\pi i/4}=-\frac{1}{4}e^{\pi i/4} \quad\text{and}\quad\mathrm{Res}(f; z_2) = \left.\frac{1}{4z^3}\right|_{z=z_2} =\frac{1}{4}e^{-9\pi i/4}=\frac{1}{4}e^{-\pi i/4}}}}
 		\]
 				
@@ -298,7 +298,7 @@
 		<span class="fragment fade-in">
 		<p>To obtain the final result we note that since the integrand $f=1/(1+x^4)$ is an <em>even function</em>, that</p>
 		\[
-		\color{red}{\boxed{\color{white}{
+		\color{#00FF00}{\boxed{\color{white}{
 		\begin{align*}		
 		 \int_{0}^\infty \frac{1}{1+x^4}\, \mathrm{d}z &=\frac{1}{2}\int_{-\infty}^\infty \frac{1}{1+x^4}\, \mathrm{d}z\\
 		 &= \frac{\pi}{2\sqrt{2}}		 
