--- a/AC1L1.html
+++ b/AC1L1.html
@@ -177,7 +177,7 @@
 		<h2>Properties of vectors</h2>
 		<ol>
 			<li>Two vectors $\displaystyle \mathbf{u}$ and $\displaystyle \mathbf{v}$ are parallel if 
-			$\displaystyle \mathbf{u}=\alpha\mathbf{u}$ for some scalar $\alpha\in\mathbb{R}$</li>
+			$\displaystyle \mathbf{v}=\alpha\mathbf{u}$ for some scalar $\alpha\in\mathbb{R}$</li>
 			<li class="fragment fade-in">The <em>unit vector</em> is such that $|\mathbf{u}|=1$</li>
 			<span class="fragment fade-in">
 			<li>The angle $\theta$ between two vectors is given by
@@ -196,7 +196,7 @@
 				src="figures/DotProdAngle.png">	
 			</span>
 			<span class="fragment fade-in">
-			<li">The <b style='color:red'>cross product</b> of the vectors $\displaystyle \mathbf{u}, \mathbf{v}\in\mathbb{R}^3$, denoted 
+			<li>The <b style='color:red'>cross product</b> of the vectors $\displaystyle \mathbf{u}, \mathbf{v}\in\mathbb{R}^3$, denoted 
 			$\mathbf{u}\times\mathbf{v}$ is the vector that is perpendicular to both $\mathbf{u}$ and $\mathbf{v}$, and whose direction is that
 			of the right hand screw as it is turned from $\mathbf{u}$ to $\mathbf{v}$. 
 		
@@ -549,4 +549,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
