--- a/AC1L1.html
+++ b/AC1L1.html
@@ -416,8 +416,8 @@
 			\\\rho\sin(\theta)\sin(\phi)\\\rho\cos(\phi)\end{pmatrix}}}}
 		\]
 		
-		<p>Here, $\rho$ is the distance of the point $\begin{pmatrix}x&y&z\end{pmatrix}$ from the origin, $\theta$ is the 
-		angle from the positive $z$-axis, and $\phi$ is the angle from cylindrical coordinates</p>
+		<p>Here, $\rho$ is the distance of the point $\begin{pmatrix}x&y&z\end{pmatrix}$ from the origin, $\phi$ is the 
+		angle from the positive $z$-axis, and $\theta$ is the angle from cylindrical coordinates</p>
 		
 		<p>Geometrically, the picture is as follows</p>
 		<img style="margin:20px;padding:0px;position:absolute;top:400px;left:600px"				
@@ -549,5 +549,6 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
 
