--- a/AC1L3.html
+++ b/AC1L3.html
@@ -412,6 +412,7 @@
 		
 		<section align="left">
 		<h3>Example 3.8</h3>
+		<span style="font-size: 25px">
 		<p>Let</p>
 		\[
 		 \phi(\mathbf{r}) = g(||\mathbf{r}||), \quad g:\mathbb{R}\to\mathbb{R}
@@ -431,9 +432,10 @@
 		 \end{align*}
 		\]
 		</span>
-		<p class="fragment fade-in">Also $\displaystyle \frac{\partial g}{\partial y} =\frac{g'(r)}{r}y$ and 
-		$\displaystyle \frac{\partial g}{\partial z} =\frac{g'(r)}{r}z\implies 
+		<p class="fragment fade-in">Also $\displaystyle \frac{\partial g}{\partial y} =\frac{g'(r)}{r}y~$ and 
+		$~\displaystyle \frac{\partial g}{\partial z} =\frac{g'(r)}{r}z\implies 
 		\color{red}{\boxed{\color{white}{\nabla g = \frac{g'(r)}{r}(x, y, z)}}}$
+		</span>
 		</section>
 	</section>
 				
