--- a/AC1L2.html
+++ b/AC1L2.html
@@ -173,7 +173,7 @@
 	<span class="fragment fade-in">
 	\[
 		f_x(x,y) = \frac{\partial}{\partial x}\left(\frac{2y}{y+\cos{x}}\right) = 
-		\color{#00FF00}{\boxed{\color{white}{\frac{-2y\sin{y}}{\left(y+\cos{x}\right)^2}}}}
+		\color{#00FF00}{\boxed{\color{white}{\frac{-2y\sin{x}}{\left(y+\cos{x}\right)^2}}}}
 	\]
 	</span>
 	</section>
@@ -583,3 +583,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
