--- a/AC1L2.html
+++ b/AC1L2.html
@@ -65,7 +65,7 @@
 	\]
 	<p>if, for every $\epsilon>0$, there exists a $\delta>0$ such that</p>
 	\[
-		(x,y)\in\mathcal{N}_\delta(P_0)\setminus P_0 \implies |f(x,y) - f(x_0,y_0)| <\epsilon
+		(x,y)\in\mathcal{N}_\delta(P_0)\setminus P_0 \implies |f(x,y) - L| <\epsilon
 	\]
 	<p></p>
 	</textBox>	
@@ -583,4 +583,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
