--- a/AC1L4.html
+++ b/AC1L4.html
@@ -168,7 +168,7 @@
 	<p>The gradient of $f$ at the point $(0, 0, 0)$ is </p>
 	\[
 	\begin{align*}
-	 \nabla F &= \begin{pmatrix}\cos{y}-ye^e&-x\sin{y}-e^x&-1\end{pmatrix}\Big|_{(0,0,0)}\\
+	 \nabla F &= \begin{pmatrix}\cos{y}-ye^x&-x\sin{y}-e^x&-1\end{pmatrix}\Big|_{(0,0,0)}\\
 	 &=\begin{pmatrix}1&-1&-1\end{pmatrix}
 	 \end{align*}
 	\]
@@ -459,3 +459,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
