--- a/AC1L4.html
+++ b/AC1L4.html
@@ -207,8 +207,8 @@
 	\color{red}{\boxed{\color{white}{
 	\begin{align*}
 	h(0,0) &= \sin{x}\sin{y}\left|_{(0,0)}\right. = 0   &h_{xx}(0,0) =-\sin{x}\sin{y}\left|_{(0,0)}\right. = 0\\
-	h_x(0,0) &= \cos{x}\sin{y}\left|_{(0,0)}\right. = 0 &h_{yy}(0,0) =~~\cos{x}\cos{y}\left|_{(0,0)}\right. = 1\\
-	h_y(0,0) &= \sin{x}\cos{y}\left|_{(0,0)}\right. = 0 &h_{xy}(0,0) =-\sin{x}\sin{y}\left|_{(0,0)}\right. = 0\\
+	h_x(0,0) &= \cos{x}\sin{y}\left|_{(0,0)}\right. = 0 &h_{xy}(0,0) =~~\cos{x}\cos{y}\left|_{(0,0)}\right. = 1\\
+	h_y(0,0) &= \sin{x}\cos{y}\left|_{(0,0)}\right. = 0 &h_{yy}(0,0) =-\sin{x}\sin{y}\left|_{(0,0)}\right. = 0\\
 	\end{align*}
 	}}}
 	\]
@@ -459,4 +459,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
