--- a/AC1L4.html
+++ b/AC1L4.html
@@ -277,7 +277,7 @@
 	
 	\[
 	\color{red}{\boxed{\color{white}{
-	\iint_\mathcal{R} f(x,y)\,\mathrm{d}x\mathrm{d}y = \iint_\mathcal{G}f(g(u,v), h(u,v))|J(u,v)|\,\mathrm{d}u\mathrm{d}v
+	\iint_\mathcal{R} f(x,y)\,\mathrm{d}x\mathrm{d}y = \iint_\mathcal{G}f(g(u,v), h(u,v))|\mathrm{det}\left(J(u,v)\right)|\,\mathrm{d}u\mathrm{d}v
 	}}}
 	\]
 	<p style="color:#00FF00">Here $J$ is the <em>Jacobian matrix</em> of the transformation</p>
@@ -459,5 +459,6 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
 
