--- a/AC1L7.html
+++ b/AC1L7.html
@@ -265,7 +265,7 @@
 		src="figures/Orientability.png">
 		<img style="margin:0px;padding:0px;position:absolute;top:185px;left:700px"				
 		height="150"					
-		src="figures/OrientedSurface.png">
+		src="figures/NormalHemiSphere.png">
 	
 	<span class="fragment fade-in">
 	<p>If a curve $C$ lies on an orientable surface $S$ then we say that the curve $C$ is <b style="color:#00FF00">positively oriented</b> if a right handed screw
