--- a/AC1L6.html
+++ b/AC1L6.html
@@ -108,7 +108,7 @@
 		$y=0$, $x=3$ and $y=x$, oriented counter-clockwise.</p>
 		
 		<p>(a) Sketch the region $\mathcal{D}$</p>
-		<p>(b) Evaluate $\displaystyle \oint_C\mathbf{f}\cdot\mathrm{d}\mathbf{r}$ directly by parametrising $C$</p>
+		<p>(b) Evaluate $\displaystyle \oint_C\mathbf{F}\cdot\mathrm{d}\mathbf{r}$ directly by parametrising $C$</p>
 		
 		<h3>Solution</h3>
 		<span class="fragment fade-in">
@@ -499,3 +499,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
