--- a/AC1L6.html
+++ b/AC1L6.html
@@ -347,7 +347,7 @@
 		<p>Or integrating</p>
 		\[
 			\color{red}{\boxed{\color{white}{
-			\frac{\partial f}{\partial x} = g, \quad\frac{\partial f}{\partial y} = h, \quad\frac{\partial f}{\partial z} = k,
+			\frac{\partial f}{\partial x} = g, \quad\frac{\partial f}{\partial y} = h, \quad\frac{\partial f}{\partial z} = k
 			}}}
 		\]
 		</span>
@@ -499,4 +499,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
