--- a/AC1L6.html
+++ b/AC1L6.html
@@ -284,7 +284,7 @@
 		</boxTitle>
 		<p>The following statements are equivalent:</p>		
 		<ol>
-			<li>$\displaystyle \int_C\mathbf{F}\cdot\mathrm{d}\mathbf{r} = 0$ around every closed loop in $\mathcal{D}~~~$</li>
+			<li>$\displaystyle \oint_C\mathbf{F}\cdot\mathrm{d}\mathbf{r} = 0$ around every closed loop in $\mathcal{D}~~~$</li>
 			<li>The field $\mathbf{F}$ is conservative on $\mathcal{D}$</li>
 		</ol>
 		<p></p>
@@ -499,5 +499,6 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
 
