--- a/AC1L6.html
+++ b/AC1L6.html
@@ -262,7 +262,7 @@
 	greatly simplifies:</p>
 	\[
 	\color{red}{\boxed{\color{white}{
-	 \int_C \mathbf{F}\cdot\mathrm{d}\mathbf{r} = \int_C\nabla f\cdot\mathrm{d}\mathbf{r} = f(A)-f(B)
+	 \int_C \mathbf{F}\cdot\mathrm{d}\mathbf{r} = \int_C\nabla f\cdot\mathrm{d}\mathbf{r} = f(B)-f(A)
 	 }}}
 	\]
 	<p>where $A, B$ are respectively the start and end points of $C$</p>
@@ -499,6 +499,7 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
 
 
