--- a/AC1L7.html
+++ b/AC1L7.html
@@ -79,7 +79,7 @@
 	<section>
 		<section  align="left">				
 		<h3>Example 7.1</h3>
-		<p>Find the surface area of a spehere of radius $2$</p>
+		<p>Find the surface area of a sphere of radius $2$</p>
 	
 		<h3>Solution</h3>
 		<span class="fragment fade-in">
@@ -431,3 +431,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
