--- a/AC1L9.html
+++ b/AC1L9.html
@@ -138,7 +138,8 @@
 		\[
 			\begin{align*}
 			\int_0^1\int_0^1\int_0^1 \left(x+y+z\right)\,\mathrm{d}x\mathrm{d}y\mathrm{d}z &= \int_0^1\int_0^1\bigg[\frac{1}{2}x^2+yx+zx\bigg]_0^1\,\mathrm{d}y\mathrm{d}z\\
-			&=\int_0^1\int_0^1\left(\frac{1}{2}+y+z\right)\,\mathrm{d}y\mathrm{d}z = \int_0^1\bigg[\frac{1}{2}y+\frac{1}{2}y^2+zy\bigg]_0^1\,\mathrm{d}z\\
+			&=\int_0^1\int_0^1\left(\frac{1}{2}+y+z\right)\,\mathrm{d}y\mathrm{d}z \\
+			&= \int_0^1\bigg[\frac{1}{2}y+\frac{1}{2}y^2+zy\bigg]_0^1\,\mathrm{d}z\\
 			&= \int_0^1 \left(1+z\right)\,\mathrm{d}z = \bigg[z+\frac{1}{2}z^2\bigg]_0^1 = \color{red}{\boxed{\color{white}{\frac{3}{2}}}}
 			\end{align*}
 		\]
