--- a/AC1L7.html
+++ b/AC1L7.html
@@ -105,7 +105,7 @@
 			\color{red}{\boxed{\color{white}{
 			\mathrm{d}\sigma = \begin{vmatrix}\mathbf{i}&\mathbf{j}&\mathbf{k}\\
 			-2\sin\theta\sin\phi&2\cos\theta\sin\phi&0\\
-			2\cos\theta\cos\phi&2\sin\theta\cos\phi&-2\sin\phi\end{vmatrix}\mathrm{d}u\mathrm{d}v
+			2\cos\theta\cos\phi&2\sin\theta\cos\phi&-2\sin\phi\end{vmatrix}\mathrm{d}\phi\mathrm{d}\theta
 			}}}
 		\]
 		</span>
@@ -132,7 +132,7 @@
 		
 		<p>And</p>
 		\[
-		\mathrm{d}\sigma = 4\sin\phi\,\mathrm{d}u\mathrm{d}v
+		\mathrm{d}\sigma = 4\sin\phi\,\mathrm{d}\phi\mathrm{d}\theta
 		\]
 		</span>
 		
@@ -431,4 +431,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
