--- a/AC1L8.html
+++ b/AC1L8.html
@@ -87,7 +87,7 @@
 	<h3>Example 8.1</h3>
 	<p>Evaluate the integral </p>
 	\[
-		\int_CP\,\mathrm{d}x+Q\,\mathrm{d}y
+		\oint_CP\,\mathrm{d}x+Q\,\mathrm{d}y
 	\]
 	<p>where $\mathcal{U}$ is the unit square and</p>
 	\[
@@ -101,7 +101,7 @@
 	\]
 	<p>so that by Green's theorem:</p>
 	\[
-	\int_C\left(y^2+\sin{x^2}\right)\,\mathrm{d}x +\left(\cos{y^2}-x\right)\,\mathrm{d}y = \int_0^1\int_0^1 \left(-1-2y\right)\,\mathrm{d}x\mathrm{d}y
+	\oint_C\left(y^2+\sin{x^2}\right)\,\mathrm{d}x +\left(\cos{y^2}-x\right)\,\mathrm{d}y = \int_0^1\int_0^1 \left(-1-2y\right)\,\mathrm{d}x\mathrm{d}y
 	\]
 	</span>
 	</section>
@@ -109,7 +109,7 @@
 	<section align="left">
 	<h3>Example 8.1 (ctd)</h3>
 	\[
-	\int_C\left(y^2+\sin{x^2}\right)\,\mathrm{d}x +\left(\cos{y^2}-x\right)\,\mathrm{d}y = \int_0^1\int_0^1 \left(-1-2y\right)\,\mathrm{d}x\mathrm{d}y
+	\oint_C\left(y^2+\sin{x^2}\right)\,\mathrm{d}x +\left(\cos{y^2}-x\right)\,\mathrm{d}y = \int_0^1\int_0^1 \left(-1-2y\right)\,\mathrm{d}x\mathrm{d}y
 	\]
 	
 	<p>Thus</p>
@@ -381,3 +381,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
