--- a/AC1L9.html
+++ b/AC1L9.html
@@ -56,7 +56,7 @@
 	\[
 		\color{red}{\boxed{\color{white}{
 		\oint_C\mathbf{F}\cdot\mathbf{n}\,\mathrm{d}s = \iint_\mathcal{R}\left(\frac{\partial F_1}{\partial x}+\frac{\partial F_2}{\partial y}\right)\,\mathrm{d}x\mathrm{d}y 
-		= \iint\nabla F\,\mathrm{d}x\mathrm{d}y}}}
+		= \iint\nabla\cdot F\,\mathrm{d}x\mathrm{d}y}}}
 	\]
 	<p>This equation states that the outward flux across a simple curve can be computed by integrating the divergence of the field 
 	over the region enclosed by the curve</p>
@@ -87,7 +87,7 @@
 	<p>across a closed oriented surface $S$ in the direction of the surface's outward unit normal field $\mathbf{n}$ equals the 
 	integral of $\displaystyle \nabla\cdot\mathbf{F}$ over the region $\mathcal{D}$ enclosed by the surface:</p>
 	\[
-	\iint_S \mathbf{F}\cdot\mathbf{d}\,\mathrm{d}\sigma = \iiint_\mathcal{D} \nabla\cdot\mathbf{F}\,\mathrm{d}V
+	\iint_S \mathbf{F}\cdot\mathbf{n}\,\mathrm{d}\sigma = \iiint_\mathcal{D} \nabla\cdot\mathbf{F}\,\mathrm{d}V
 	\]
 	<p></p>
 	</textBox>
