--- a/AC1L9.html
+++ b/AC1L9.html
@@ -144,7 +144,7 @@
 			\end{align*}
 		\]
 		<br>
-		<p class="fragment fade-in" style="color:#00FF00">This is considerably less work than computing six surface intergals!<p>
+		<p class="fragment fade-in" style="color:#00FF00">This is considerably less work than computing six surface integrals!<p>
 		
 		</section>
 		
@@ -337,3 +337,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
