--- a/AC1L9.html
+++ b/AC1L9.html
@@ -261,7 +261,7 @@
 		\int_0^{\pi/2}\int_0^{\pi/2}\bigg[\frac{3}{4}r^4\sin^2\phi\cos\theta\bigg]_0^2\,\mathrm{d}\theta\mathrm{d}\phi\\
 		&= \int_0^{\pi/2}\int_0^{\pi/2}12\sin^2\phi\cos\theta\,\mathrm{d}\theta\mathrm{d}\phi\\
 		&= \int_0^{\pi/2}\bigg[12\sin^2\phi\sin\theta\bigg]_0^{\pi/2}\,\mathrm{d}\phi\\
-		&=\int_0^{\pi/2}12\sin^2\theta\,\mathrm{d}\theta \\		
+		&=\int_0^{\pi/2}12\sin^2\phi\,\mathrm{d}\phi \\		
 		&=12\bigg[\frac{\phi}{2}-\frac{\sin(2\phi)}{4}\bigg]_0^{\pi/2} = 12\left(\frac{\pi}{4}\right) = 
 		\color{red}{\boxed{\color{white}{3\pi}}}
 		\end{align*}
@@ -337,4 +337,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
