--- a/AC1L10.html
+++ b/AC1L10.html
@@ -320,7 +320,7 @@
 	
 	<span class="fragment fade-in">
 	<p>If $C$ denotes the closed curve bounding the region $\mathcal{D}$ (also denoted $\partial\mathcal{D}$) then the 
-	line integral of $\mathbf{F}$ about $C is</p>
+	line integral of $\mathbf{F}$ about $C$ is</p>
 	\[
 		\oint_{C}\mathbf{F}\cdot\mathrm{d}\mathbf{r} = \oint_C F_1\mathrm{d}x + F_2\mathrm{d}y
 	\]
@@ -431,3 +431,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
