--- a/AC1L10.html
+++ b/AC1L10.html
@@ -344,7 +344,7 @@
 	<p>where $\mathrm{d}A = \mathrm{d}x\mathrm{d}y$</p>
 	
 	<span class="fragment fade-in">
-	<p>Now, since our surface is 'flat' we have that $\mathbf{n}=\mathbf{k}$ we have the relation</p>
+	<p>Now, since our surface is 'flat' we have that $\mathbf{n}=\mathbf{k}$ giving the relation</p>
 	\[
 	\color{red}{\boxed{\color{white}{
 		\begin{align*}
@@ -431,4 +431,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
