--- a/AC2L1.html
+++ b/AC2L1.html
@@ -60,9 +60,9 @@
 	
 	<h3><b>Timetable</b></h3>
 	<p style="border-width:2px; border-style:solid; border-color:white; padding: .5em;">
-	Lecturer: 13-14, Wednesday ERD 161<br>	
-	Seminars: Group M1 9-10, Tuesday NHB 169<br>				
-	&emsp;&emsp;&emsp;&emsp;&emsp; Group M2 10-11, Tuesday ABK 005
+	Lecturer: 11-12, Thursday ERD 161<br>	
+	Seminars: Group M1, P 1-2, Tuesday Pavillionm  025<br>				
+	&emsp;&emsp;&emsp;&emsp;&emsp; Group M2 2-3, Tuesday TLB P08
 	</p>
 				
 	<h3><b>Office hours</b></h3>
@@ -452,4 +452,5 @@
         <!-- ################################################### -->
         <!-- ################################################### -->
 </body>
+
 </html>
