--- a/AC2L1.html
+++ b/AC2L1.html
@@ -77,17 +77,18 @@
 				<br>
 				<font size="6">
 				<ul>
-					<li><b>Partial differential equations (TERM 1)</b></li></span>
+					<li><b>Vector Calculus (TERM 1)</b></li>
 					<ul>
-						<li>Equations involving one or more partial derivatives</li>
-						<li>Real-world applications</li>
-						<li>Methods of solution</li>
+						<li>Vector functions and vector fields</li>
+						<li>Line and surface integrals</li>
+						<li>Integral theorems:</li>
+						<ul>
+							<li>Green's theorem</li>
+							<li>The divergence theorem</li>
+							<li>Stoke's theorem</li>
+						</ul>
 					</ul><br>
-					<span  class = "fragment fade-in"><li><b>Fourier series (TERM 1)</b></li>
-					<ul>
-						<li>Series representation of periodic functions</li>
-						<li>Used to solve PDEs</li>
-					</ul><br>	</span>	
+					
 					<span  class = "fragment fade-in"><li> <b>Complex analysis (TERM 2)</b></li>
 					<ul>
 						<li>Calculus of complex functions</li>
@@ -454,3 +455,4 @@
 </body>
 
 </html>
+
