--- a/AC2L1.html
+++ b/AC2L1.html
@@ -101,9 +101,9 @@
 				<h3 ><b>Reading list</b></h3>
 								
 				<ul>
-					<span  class = "fragment fade-in"><li>You will probably not need to buy a book for this module as <a href="https://jjcrofts77.github.io/Advanced-Calculus-MATH20471/intro.html#" target="_blank" style="color: red">notes</a> are provided, as well 
+					<li>You will probably not need to buy a book for this module as <a href="https://jjcrofts77.github.io/Advanced-Calculus-MATH20471/intro.html#" target="_blank" style="color: red">notes</a> are provided, as well 
 					as supplementary material during seminars and via the <a href="https://now.ntu.ac.uk/" target="_blank" style="color: red">University's virtual learning service</a></li>
-					<br></span><span  class = "fragment fade-in">
+					<br><span  class = "fragment fade-in">
 					<li>However, the following books cover most of the material to be presented as well as providing a good basis for additional reading and learning</li>	<br>				
 					
 					<ul>
@@ -455,4 +455,5 @@
 </body>
 
 </html>
+
 
