--- a/AC2L1.html
+++ b/AC2L1.html
@@ -101,17 +101,17 @@
 				<h3 ><b>Reading list</b></h3>
 								
 				<ul>
-					<li>You will probably not need to buy a book for this module as <a href="https://jjcrofts77.github.io/Advanced-Calculus-MATH20471/intro.html#" target="_blank" style="color: red">notes</a> are provided, as well 
-					as supplementary material during seminars and via the <a href="https://now.ntu.ac.uk/" target="_blank" style="color: red">University's virtual learning service</a></li>
+					<li>You will probably not need to buy a book for this module as <a href="https://jjcrofts77.github.io/Advanced-Calculus-MATH20471/intro.html#" target="_blank">notes</a> are provided, as well 
+					as supplementary material during seminars and via the <a href="https://now.ntu.ac.uk/" target="_blank">University's virtual learning service</a></li>
 					<br><span  class = "fragment fade-in">
 					<li>However, the following books cover most of the material to be presented as well as providing a good basis for additional reading and learning</li>	<br>				
 					
 					<ul>
-						<li>Jordan and Smith (2008), <a href="https://www.amazon.co.uk/Mathematical-Techniques-Introduction-Engineering-Physical/dp/0199282013" target="_blank" style="color: yellow">Mathematical techniques: an introduction 
+						<li>Jordan and Smith (2008), <a href="https://www.amazon.co.uk/Mathematical-Techniques-Introduction-Engineering-Physical/dp/0199282013" target="_blank" style="color: #00FF00">Mathematical techniques: an introduction 
 						for the engineering, physical and mathematical sciences</a></li><br>
-						<li>Kent <em>et al.</em> (2012), <a href="https://www.amazon.co.uk/Fundamentals-Differential-Equations-Boundary-Problems/dp/0321977106" target="_blank" style="color: yellow">Fundamentals of differential equations and 
+						<li>Kent <em>et al.</em> (2012), <a href="https://www.amazon.co.uk/Fundamentals-Differential-Equations-Boundary-Problems/dp/0321977106" target="_blank" style="color: #00FF00">Fundamentals of differential equations and 
 						boundary value problems</a></li>						<br>
-						<li>Kwok (2010), <a href="https://www.amazon.co.uk/Applied-Complex-Variables-Scientists-Engineers/dp/0521701384" target="_blank" style="color: yellow">Applied complex variables for scientists and engineers</a></li>
+						<li>Kwok (2010), <a href="https://www.amazon.co.uk/Applied-Complex-Variables-Scientists-Engineers/dp/0521701384" target="_blank" style="color: #00FF00">Applied complex variables for scientists and engineers</a></li>
 					</ul></span>
 				</ul>
 			
@@ -455,5 +455,6 @@
 </body>
 
 </html>
+
 
 
