--- a/AC2L1.html
+++ b/AC2L1.html
@@ -204,7 +204,7 @@
 						<span class="fragment fade-in">
 						<li><b>Multiplication</b>: </li>
 						<ul>
-								<li>$k\in\mathbb{R}: kz = kx+iky \quad\text{\textcolor{red}{scalar multiplication}}$</li>
+								<li>$k\in\mathbb{R}: kz = kx+iky \qquad (\text{scalar multiplication})$</li>
 								<li>$$z_1z_2 = (x_1+iy_1)(x_2+iy_2) = (x_1x_2-y_1y_2)+i(x_1y_2+x_2y_1)$$								
 								</li>
 						</ul></span>
@@ -455,6 +455,7 @@
 </body>
 
 </html>
+
 
 
 
