--- a/AC2L4.html
+++ b/AC2L4.html
@@ -137,7 +137,7 @@
 			\]
 			
 			<br>
-			we have that $\pm n\pi$ are <span style="color:magenta">second order zeros</span> of $\sin^2(z)$ for each $n\in\mathbb{Z}$ </p>
+			we have that $\pm n\pi$ are <span style="color:#00FF00">second order zeros</span> of $\sin^2(z)$ for each $n\in\mathbb{Z}$ </p>
 											
 		</section>	
 	</section>			 					
@@ -496,3 +496,4 @@
         <!-- ################################################### -->
 </body>
 </html>
+
