--- a/AC2L4.html
+++ b/AC2L4.html
@@ -169,8 +169,8 @@
 			<boxTitle>
               <h3>Definition 14.2 (neighbourhood)</h3>
             </boxTitle>			
-			A <em>neighbourhood</em> (or $\epsilon$-neighbourhood) of a complex number $z_0$ is defined as a disc in the complex plane 
-			obeying $\displaystyle |z-z_0|<\epsilon$ for some small positive number $\epsilon$
+			<p>A <em>neighbourhood</em> (or $\epsilon$-neighbourhood) of a complex number $z_0$ is defined as a disc in the complex plane 
+			obeying $\displaystyle |z-z_0|<\epsilon$ for some small positive number $\epsilon$</p>
 			</textBox>
 			</span>
 			
@@ -234,7 +234,7 @@
 			<boxTitle>
               <h3>Definition 14.3 (pole)</h3>
             </boxTitle>			
-			A function $f(z)$ has an order $n$ pole if $z_0$ is a zero of order $n$ for the function $1/f(z)$
+			<p>A function $f(z)$ has an order $n$ pole if $z_0$ is a zero of order $n$ for the function $1/f(z)$</p>
 			</textBox>
 		</span>
 				
@@ -242,13 +242,12 @@
 		
 		<section align="left">
 			
-			<span style="color: #00FF00">
+			
 			<p>Another way of thinking about this is that $z_0$ is an order $n$ pole if </p>
 			\[
 			\left(z-z_0\right)^n f(z)~ \text{ is analytic, but } ~\left(z-z_0\right)^{n-1} f(z)				
 			\]		
 			<p>is not</p>
-			</span>
 			
 			<br>
 			
@@ -266,7 +265,7 @@
 		
 			<p> has zeros at $z_{1,2}=-1,-2$, that is $F(-1)=F(-2)=0$</p>
 		
-			<p style="color:magenta" class="fragment fade-in">What are the order of these poles?</p>
+			<p style="color:#00FF00" class="fragment fade-in">What are the order of these poles?</p>
 		</section>
 		
 		<section align="left">
@@ -279,7 +278,7 @@
 			\[
 			 (z+1)^1f(z) = \frac{2z+1}{z+2}
 			\]
-			<p>is analytic (well-defined and "differentiable") at $z_1=-1$</p>
+			<p>is analytic (well-defined <em>and</em> differentiable) at $z_1=-1$</p>
 			
 			<p class="fragment fade-in">Where as 
 			<br>
@@ -305,12 +304,12 @@
 			<boxTitle>
         <h3>Definition 14.4 (removable)</h3>
         </boxTitle>			
-		If $f(z)$ is not defined at $z_0$ then $f(z)$ is not analytic there. However, if $f(z)$ is defined at every point in a 
+		<p>If $f(z)$ is not defined at $z_0$ then $f(z)$ is not analytic there. However, if $f(z)$ is defined at every point in a 
 		neighbourhood of $z_0$ and 
 		\[
 		\lim_{z\to z_0} f(z)
 		\]
-		exists, then $z_0$ is a <em>removable singularity</em>
+		exists, then $z_0$ is a <em>removable singularity</em></p>
 		</textBox>
 			
 		<br>
@@ -496,4 +495,5 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
