--- a/AC2L4.html
+++ b/AC2L4.html
@@ -338,11 +338,11 @@
 			<boxTitle>
               <h3>Definition 14.5 (isolated)</h3>
             </boxTitle>					
-			We say that $z_0$ is an <em>isolated singularity</em> if a <em>deleted $\epsilon$-neighbourhood</em>&emsp;
+			<p>We say that $z_0$ is an <em>isolated singularity</em> if a <em>deleted $\epsilon$-neighbourhood</em>&emsp;
 			\[
 			0<|z-z_0|<\epsilon
 			\]
-			can be drawn enclosing no other singular points.
+			can be drawn enclosing no other singular points.</p>
 		</textBox>				
 									
 		<br>	
@@ -369,21 +369,22 @@
 			<boxTitle>
               <h3>Definition 14.6 (essential)</h3>			  
             </boxTitle>						
-			If a singular point can not be isolated it is called an <em>essential singularity</em>&emsp;
+			<p>If a singular point can not be isolated it is called an <em>essential singularity</em>&emsp;</p>
 		</textBox>
 		
 		<br>
 		<span class="fragment fade-in">
+		<font size="6">	
 		<h3>Example 14.6</h3>	
 		<p>Show that the function $\displaystyle f(z) = \frac{1}{\sin\left(z^{-1}\right)}$ has an essential singularity at $z=0$ </p>
 		
 		<span class="fragment fade-in">			
-		<p><b>Solution</b></p>		
-		This function has two types of singularities: isolated singularities whenever the denominator equals zero, <em>i.e.</em>
-		\[\color{magenta}{\boxed{\color{white}{
+		<b>Solution</b>
+		<p>This function has two types of singularities: isolated singularities whenever the denominator equals zero, <em>i.e.</em></p>
+		\[\color{red}{\boxed{\color{white}{
 		\sin\left(z^{-1}\right) = 0 \implies z^{-1} = n\pi \quad n\in\mathbb{Z}}}}
 		\]
-		and an essential singularity at $z=0$.
+		<p>and an essential singularity at $z=0$.</p>
 		
 		<p class="fragment fade-in"> To see this, note that each of the isolated singuarities can be enclosed in an $\epsilon$-disc containing no other singularities; just set 
 		\[
@@ -392,7 +393,7 @@
 		</p>
 		</span>			
 		</span>
-		
+		</font>
 		</section>
 		<section align="left">
 		
@@ -495,5 +496,6 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
 
