--- a/AC2L4.html
+++ b/AC2L4.html
@@ -60,8 +60,8 @@
               <h3>Definition 14.1 (order of a zero)</h3>
             </boxTitle>
 			
-			A <em>zero has order $n$</em> if not only $f$ but also the derivatives $f', f'',\ldots f^{(n-1)}$ are all zero 
-			at $z=z_0$ but $f^{(n)}\neq 0$
+			<p>A <em>zero has order $n$</em> if not only $f$ but also the derivatives $f', f'',\ldots f^{(n-1)}$ are all zero 
+			at $z=z_0$ but $f^{(n)}\neq 0$</p>
 			</textBox>
 			</span>
 			
@@ -374,7 +374,7 @@
 		
 		<br>
 		<span class="fragment fade-in">
-		<font size="6">	
+		<font size="5">	
 		<h3>Example 14.6</h3>	
 		<p>Show that the function $\displaystyle f(z) = \frac{1}{\sin\left(z^{-1}\right)}$ has an essential singularity at $z=0$ </p>
 		
@@ -496,6 +496,7 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
 
 
