--- a/AC2L4.html
+++ b/AC2L4.html
@@ -421,7 +421,7 @@
 			src="figures/essentialsing.png">
 		</div>
 		
-		<p style="color:magenta" class="fragment fade-in">It follows that we cannot isolate the point $z^*=0$ and so it must be an essential singularity</p>
+		<p style="color:#00FF00" class="fragment fade-in">It follows that we cannot isolate the point $z^*=0$ and so it must be an essential singularity</p>
 		</section>
 	</section>
 	
@@ -496,6 +496,7 @@
         <!-- ################################################### -->
 </body>
 </html>
+
 
 
 
